# AuFAMe

./: README.rst  pyproject.toml
snakemake/: aufame.smk  aufame_config.yaml
snakemake-envs/: bakta-1.8.2.yml  eggnog-2.1.12.yml  emapper2gbk-0.3.2.yml  mpwt-padmet.yml  padmet-5.0.3.yml
