[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aufame"
dynamic = ["version"]
authors = [{name = "aufame", email = "gem-aureme@inria.fr"}]
readme = "README.rst"
description = "AuFAMe : Automated Functional Annotation and Metabolic networks building from bacterial genomes."
license = {text = "GPL-3.0-or-later"}

dependencies = ['pandas',
        'glob2',
        'pathlib'
]
	     

[project.scripts]
aufame = "src.__main__:main"

[project.urls]
Homepage = "https://github.com/AuReMe/aufame"

[tool.setuptools]
packages = ['aufame']

[tool.setuptools.dynamic]
version = { attr = "aufame.__version__" }
dependencies = {file = ["requirements.txt"]}
